# PA-2

./: .gitignore  CMakeLists.txt  REPORT.md  main.cpp
.cache/clangd/index/: asteroid_belt.cpp.19768534C34BE178.idx  asteroid_belt.cpp.9B6B1538D24B4BC9.idx  asteroid_belt.h.3DF69D2FEBACF522.idx  asteroid_belt.h.909328FE4A9E95D4.idx  camera.cpp.A63D65E04904EBB9.idx  camera.cpp.D90FB6D7A6C198AC.idx  camera.h.1E65D47AFB846655.idx  camera.h.98184720938F76C3.idx  engine.cpp.7981E6B1901E4748.idx  engine.cpp.C7EE0E592086E5D0.idx  engine.h.1505984737810606.idx  engine.h.CBAB57CF651A1DE9.idx  graphics.cpp.1F755BB62C55AD52.idx  graphics.cpp.BEFACCA4F8FB2B94.idx  graphics.h.55E817A2C6C25777.idx  graphics.h.B988624D980D05F3.idx  graphics_headers.h.44AE50F96746B4F0.idx  graphics_headers.h.F67627769B84D77D.idx  line.cpp.DF461729CF0D9EC1.idx  line.cpp.E1E0AC42170D95DD.idx  line.h.27DE5B3A80208876.idx  line.h.A68E8384400343A6.idx  main.cpp.126FC6B228430A05.idx  main.cpp.48C1E691E90808EB.idx  material.h.52E162B3EE5E6B8A.idx  material.h.A80A20E3DCF520A3.idx  mesh.cpp.045DB2555CAD3B4B.idx  mesh.cpp.C36A6063A212776E.idx  mesh.h.41432242FC5FD77E.idx  mesh.h.759DADAA7DEDDB29.idx  mode.h.191B6F0C17913739.idx  mode.h.99BC402C9512DA81.idx  object.cpp.5BF16A53B8349D29.idx  object.cpp.E53A33CFDD853127.idx  object.h.0C989F628A24E399.idx  object.h.1A03D8639DE9608D.idx  ring.cpp.50BFC59F4176D342.idx  ring.cpp.7898C49154618775.idx  ring.h.95AD4677A6E804A6.idx  ring.h.9A9419E72B51E0ED.idx  (+24 more)
Code/: CMakeCache.txt  Makefile  README.md  asteroid_belt.cpp  asteroid_belt.h  camera.cpp  camera.h  cmake_install.cmake  cube.cpp  cube.h  engine.cpp  engine.h  graphics  graphics.cpp  graphics.h  graphics_headers.h  light.cpp  light.h  line.cpp  line.h  main.cpp  material.h  mesh.cpp  mesh.h  mode.h  object.cpp  object.h  pyramid.cpp  pyramid.h  ring.cpp  ring.h  shader.cpp  shader.h  shader_variable_locations.h  skybox.cpp  skybox.h  solar_constants.h  sphere.cpp  sphere.h  texture.cpp  (+3 more)
